--- a/roles/wp-lets-surf/files/etc/apache2/sites-available/lets-surf.conf
+++ b/roles/wp-lets-surf/files/etc/apache2/sites-available/lets-surf.conf
@@ -1,4 +1,5 @@
-<VirtualHost www.lets-surf.com:80>
+Listen 80
+<VirtualHost *:80>
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
 	# redirection URLs. In the context of virtual hosts, the ServerName
@@ -6,10 +7,11 @@
 	# match this virtual host. For the default virtual host (this file) this
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
-	#ServerName www.example.com
+
+	ServerName www.lets-surf.com
 
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/html/lets-surf
+	DocumentRoot "/var/www/html/lets-surf"
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
